--- a/mobile/app/src/main/res/layout/activity_main.xml
+++ b/mobile/app/src/main/res/layout/activity_main.xml
@@ -18,14 +18,14 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="@string/hello"
-            android:textAppearance="@style/label"
+            android:textAppearance="@style/simple_label"
             android:textSize="40sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             tools:layout_editor_absoluteY="0dp" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/wallet_rv"
+            android:id="@+id/wallets_rv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="10dp"
@@ -33,13 +33,13 @@
         </androidx.recyclerview.widget.RecyclerView>
 
         <Button
-            android:id="@+id/go_to_create_wallet_btn"
+            android:id="@+id/add_new_wallet_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/btn_simple"
             android:layout_marginVertical="20dp"
-            android:text="@string/new_wallet"
-            android:textAppearance="@style/button_style"
+            android:text="@string/add_new_wallet"
+            android:textAppearance="@style/simple_button"
             android:textColor="@color/light_gray"
             app:backgroundTint="@null" />
     </LinearLayout>
