--- a/mobile/app/src/main/res/layout/item_notification_invitation.xml
+++ b/mobile/app/src/main/res/layout/item_notification_invitation.xml
@@ -10,10 +10,10 @@
     android:background="@drawable/bg_round_box_dark">
 
     <TextView
-        android:id="@+id/walletName_tv"
+        android:id="@+id/name_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="@style/label"
+        android:textAppearance="@style/simple_label_bold"
         android:textSize="36sp"
         android:textColor="@color/yellow" />
 
@@ -37,18 +37,18 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textAppearance="@style/label"
+            android:textAppearance="@style/simple_label"
             android:textSize="20sp"
-            android:text="@string/owner" />
+            android:text="@string/owner_label" />
 
         <TextView
             android:id="@+id/number_of_members_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textAppearance="@style/label"
+            android:textAppearance="@style/simple_label"
             android:textSize="20sp"
-            android:text="@string/number_of_members" />
+            android:text="@string/number_of_members_label" />
 
     </LinearLayout>
 
@@ -58,8 +58,8 @@
         android:layout_height="wrap_content"
         android:background="@drawable/btn_simple"
         android:layout_marginBottom="20dp"
-        android:text="@string/accept_btn_string"
-        android:textAppearance="@style/button_style"
+        android:text="@string/accept"
+        android:textAppearance="@style/simple_button"
         android:textColor="@color/light_gray"
         app:backgroundTint="@null" />
 
@@ -68,8 +68,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/btn_danger"
-        android:text="@string/deny_btn_string"
-        android:textAppearance="@style/button_style"
+        android:text="@string/deny"
+        android:textAppearance="@style/simple_button"
         android:textColor="@color/light_gray"
         app:backgroundTint="@null" />
 
