--- a/mobile/app/src/main/res/layout/item_user_search.xml
+++ b/mobile/app/src/main/res/layout/item_user_search.xml
@@ -7,10 +7,10 @@
     android:background="@drawable/bg_round_box_dark"
     android:layout_marginVertical="5dp">
     <TextView
-        android:id="@+id/member_name"
+        android:id="@+id/member_name_tv"
         android:layout_width="200dp"
         android:layout_height="match_parent"
-        android:textAppearance="@style/info_label"
+        android:textAppearance="@style/simple_label"
         android:textSize="18sp"
         android:layout_marginHorizontal="20dp">
     </TextView>
