--- a/mobile/app/src/main/res/layout/item_wallet.xml
+++ b/mobile/app/src/main/res/layout/item_wallet.xml
@@ -10,10 +10,10 @@
     android:background="@drawable/bg_round_box_dark">
 
         <TextView
-            android:id="@+id/walletName_tv"
+            android:id="@+id/name_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="@style/label"
+            android:textAppearance="@style/simple_label_bold"
             android:textSize="36sp"
             android:textColor="@color/yellow" />
 
@@ -37,37 +37,37 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:textAppearance="@style/label"
+                android:textAppearance="@style/simple_label"
                 android:textSize="20sp"
-                android:text="@string/owner" />
+                android:text="@string/owner_label" />
 
             <TextView
                 android:id="@+id/number_of_members_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:textAppearance="@style/label"
+                android:textAppearance="@style/simple_label"
                 android:textSize="20sp"
-                android:text="@string/number_of_members" />
+                android:text="@string/number_of_members_label" />
 
             <TextView
                 android:id="@+id/balance_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="@style/label"
+                android:textAppearance="@style/simple_label"
                 android:textSize="20sp"
                 android:layout_weight="1"
-                android:text="@string/balance" />
+                android:text="@string/balance_label" />
 
         </LinearLayout>
 
         <Button
-            android:id="@+id/goToWallet_btn"
+            android:id="@+id/go_to_wallet_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/btn_simple"
             android:text="@string/go_to_wallet"
-            android:textAppearance="@style/button_style"
+            android:textAppearance="@style/simple_button"
             android:textColor="@color/light_gray"
             app:backgroundTint="@null" />
 
