--- a/mobile/app/src/main/res/values/styles.xml
+++ b/mobile/app/src/main/res/values/styles.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="label">
+
+    <style name="simple_label">
+        <item name="android:letterSpacing">0.04</item>
+        <item name="android:textColor">@color/light_gray</item>
+        <item name="fontFamily">pt sans</item>
+    </style>
+
+    <style name="simple_label_bold">
         <item name="android:letterSpacing">0.04</item>
         <item name="android:textColor">@color/light_gray</item>
         <item name="fontFamily">pt sans</item>
         <item name="android:textStyle">bold</item>
     </style>
 
-    <style name="info_label">
-        <item name="android:letterSpacing">0.04</item>
-        <item name="android:textColor">@color/light_gray</item>
-        <item name="fontFamily">pt sans</item>
-    </style>
-
-    <style name="button_style">
+    <style name="simple_button">
         <item name="android:letterSpacing">0.04</item>
         <item name="fontFamily">pt sans</item>
         <item name="android:textStyle">bold</item>
@@ -24,7 +25,7 @@
         <item name="android:shadowRadius">4</item>
         <item name="background">@drawable/btn_simple_normal</item>
         <item name="backgroundTint">@null</item>
+        <item name="android:textAllCaps">false</item>
     </style>
-
 
 </resources>
